--- a/CV.tex
+++ b/CV.tex
@@ -32,7 +32,7 @@
 \begin{description} \item [Place \& Date of Birth] Cebu City, Cebu on February 19, 1999
 \item [Address] Lower Hermag, Tabok, Mandaue City
 \item [Phone] +639053069532
-\item [Email Address] \href{mailto:adrianparvino@gmail.com}{mailto:adrianparvino@gmail.com}
+\item [Email Address] \href{mailto:programmer@adrianpar.vin}{mailto:programmer@adrianpar.vin}
 \item [Github] \href{https://github.com/adrianparvino}{https://github.com/adrianparvino}
 \end{description}
 
